--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -15,8 +15,8 @@
   </div>
 
   <div class="author__content">
-    <h3 class="author__name">{{ author.name }}</h3>
-    {% if author.bio %}<p class="author__bio">{{ author.bio }}</p>{% endif %}
+    <h6 class="author__name" align="center">{{ author.name }}</h6>
+    {% if author.bio %}<p class="author__bio" align="center">{{ author.bio }}</p>{% endif %}
   </div>
 
   <div class="author__urls-wrapper">
